// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TrialBanner rendering tests daysleft 0 - dissmissed false - test  1`] = `
<div>
  <div
    aria-live="polite"
    class="flex items-center justify-between gap-4 border-b px-4 py-2.5 text-sm border-orange-200 bg-orange-100 text-orange-800 dark:border-orange-800 dark:bg-orange-900/30 dark:text-orange-300"
    data-testid="trial-banner"
    role="status"
  >
    <div
      class="flex items-center gap-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock h-4 w-4 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span>
        Dein Trial endet
         
        <strong
          class="font-semibold"
        >
          heute
        </strong>
         – danach gelten die Free-Tier Limits.
      </span>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
    >
      <a
        class="rounded-full px-4 py-1 text-xs font-semibold text-white transition-colors bg-orange-600 hover:bg-orange-700"
        data-testid="subcription-link"
        href="/subscription/pricing"
      >
        Jetzt upgraden
      </a>
      <button
        aria-label="Banner schließen"
        class="rounded-full p-1 opacity-60 transition-all hover:bg-black/5 hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-current"
        data-testid="dismiss-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TrialBanner rendering tests daysleft 1 - dissmissed false - test  1`] = `
<div>
  <div
    aria-live="polite"
    class="flex items-center justify-between gap-4 border-b px-4 py-2.5 text-sm border-orange-200 bg-orange-100 text-orange-800 dark:border-orange-800 dark:bg-orange-900/30 dark:text-orange-300"
    data-testid="trial-banner"
    role="status"
  >
    <div
      class="flex items-center gap-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock h-4 w-4 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span>
        Noch
         
        <strong
          class="font-semibold"
        >
          1
           
          Tag
        </strong>
         
        Trial – danach gelten die Free-Tier Limits.
      </span>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
    >
      <a
        class="rounded-full px-4 py-1 text-xs font-semibold text-white transition-colors bg-orange-600 hover:bg-orange-700"
        data-testid="subcription-link"
        href="/subscription/pricing"
      >
        Jetzt upgraden
      </a>
      <button
        aria-label="Banner schließen"
        class="rounded-full p-1 opacity-60 transition-all hover:bg-black/5 hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-current"
        data-testid="dismiss-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TrialBanner rendering tests daysleft 7 - dissmissed false - test  1`] = `
<div>
  <div
    aria-live="polite"
    class="flex items-center justify-between gap-4 border-b px-4 py-2.5 text-sm border-blue-100 bg-blue-50 text-blue-800 dark:border-blue-800 dark:bg-blue-900/30 dark:text-blue-300"
    data-testid="trial-banner"
    role="status"
  >
    <div
      class="flex items-center gap-2.5"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock h-4 w-4 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6l4 2"
        />
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span>
        Noch
         
        <strong
          class="font-semibold"
        >
          7
           
          Tage
        </strong>
         
        Trial – danach gelten die Free-Tier Limits.
      </span>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
    >
      <a
        class="rounded-full px-4 py-1 text-xs font-semibold text-white transition-colors bg-blue-700 hover:bg-blue-800"
        data-testid="subcription-link"
        href="/subscription/pricing"
      >
        Jetzt upgraden
      </a>
      <button
        aria-label="Banner schließen"
        class="rounded-full p-1 opacity-60 transition-all hover:bg-black/5 hover:opacity-100 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-current"
        data-testid="dismiss-btn"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
